--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -131,6 +131,7 @@ filename = "../../src/schema/SCHEMA_VERSION"
 line-length = 99
 
 [tool.ruff.lint]
+typing-modules = ["bidsschematools._lazytypes"]
 select = [
   "E",   # pycodestyle errors
   "W",   # pycodestyle warnings
