feat(microephys): add channel-level filtering columns and documentation
- Add new Filtering Information section to microelectrode-electrophysiology.md
  explaining global and channel-specific filter parameters
- Add software_filter_types column definition to columns.yaml for specifying
  filter types with Levels defined in channels.json
- Add low_cutoff, high_cutoff, and notch optional columns to microephysChannels
  for channel-specific filter cutoff frequencies (consistent with iEEG spec)
- Replace hardware_filters and software_filters columns with the new
  software_filter_types column in microephysChannels table

--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -871,6 +871,14 @@ software_filters:
     modality sidecar JSON (for example, `*_ieeg.json`, `*_ecephys.json`, `*_icephys.json`).
 
     Use `n/a` if no software filters were applied.
+software_filter_types:
+  name: software_filter_types
+  display_name: Software filter types
+  description: |
+    The types of software filters applied to this channel.
+    The `Levels` for this column SHOULD be defined in the accompanying
+    `*_channels.json` file, mapping each filter type key to its description.
+    Use `n/a` if no software filters were applied to this channel.
   anyOf:
     - type: string
     - type: string
