--- a/src/schema/objects/enums.yaml
+++ b/src/schema/objects/enums.yaml
@@ -1578,9 +1578,9 @@ Stereotaxic:
     A generic stereotaxic coordinate system commonly used in animal neuroscience for surgical
     targeting and electrode localization. The origin is at bregma, a skull landmark defined as
     the intersection of the coronal and sagittal sutures. The x-axis corresponds to the
-    anterior-posterior (AP) axis with posterior being positive. The y-axis corresponds to the
-    dorsal-ventral (DV) or superior-inferior (SI) axis with ventral/inferior being positive.
-    The z-axis corresponds to the medial-lateral (ML) axis with right being positive.
+    anterior-posterior (AP) axis with anterior being positive. The y-axis corresponds to the
+    medial-lateral (ML) axis with right being positive. The z-axis corresponds to the
+    dorsal-ventral (DV) axis with ventral/inferior being positive.
     Units are typically in millimeters or micrometers. When using this coordinate system,
     the specific anatomical reference point and units should be specified in
     `MicroephysCoordinateSystemDescription`.
