feat(microephys): add recording metadata fields to setup schema
Add RecordingDuration, RecordingType, and EpochLength fields to the
microephysSetup sidecar rules. RecordingDuration and RecordingType are
recommended, while EpochLength is optional but recommended when
RecordingType is "epoched".

--- a/src/schema/rules/sidecars/microephys.yaml
+++ b/src/schema/rules/sidecars/microephys.yaml
@@ -45,6 +45,11 @@ microephysSetup:
          The name of the software suite used to
          record the data.
     SoftwareVersions: recommended
+    RecordingDuration: recommended
+    RecordingType: recommended
+    EpochLength:
+      level: optional
+      level_addendum: recommended if RecordingType is "epoched"
 
 microephysProcessing:
   selectors:
