--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -859,12 +859,10 @@ software_filters:
   name: software_filters
   display_name: Software filters
   description: |
-    List of temporal and/or spatial software filters applied.
-
-    For detailed filter parameters, use the `SoftwareFilters` field in the
-    modality sidecar JSON (for example, `*_ieeg.json`, `*_ecephys.json`, `*_icephys.json`).
-
-    Use `n/a` if no software filters were applied.
+    List of temporal and/or spatial software filters applied
+    (for example, `SSS`, `SpatialCompensation`).
+    Note that parameters should be defined in the general MEG sidecar .json file.
+    Indicate `n/a` in the absence of software filters applied.
   type: string
 software_filter_types:
   name: software_filter_types
