--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -2283,9 +2283,11 @@ MicroephysCoordinateSystemPhoto:
   name: MicroephysCoordinateSystemPhoto
   display_name: Microephys Coordinate System Photo
   description: |
-    A link to a photo or drawing of the microelectrode probe system.
+    Path to the photo or image file defining the coordinate system when
+    `MicroephysCoordinateUnits` is `"pixels"`.
+    Should be a [BIDS URI](SPEC_ROOT/common-principles.md#bids-uri).
   type: string
-  format: uri
+  format: bids_uri
 MISCChannelCount:
   name: MISCChannelCount
   display_name: Miscellaneous channel count
