fix: microephys electrodes/coordsystem validation with space entity support

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -88,6 +88,8 @@ coordsystem:
   target:
     suffix: coordsystem
     extension: .json
+    entities:
+      - space
   inherit: true
 
 electrodes:
