--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -1044,7 +1044,7 @@ ElectrodeMaterial:
   type: string
 ElectrodeType:
   name: ElectrodeType
-  display_name: Electrode type
+  display_name: Electrode Type
   description: |
     Type of the electrode (for example, cup, ring, clip-on, wire, needle).
   type: string
@@ -1938,7 +1938,7 @@ IntendedFor__ds_relative:
             format: dataset_relative
 InterelectrodeDistance:
   name: InterelectrodeDistance
-  display_name: Inter-electrode Distance
+  display_name: Interelectrode Distance
   description: |
     Distance between pairs or grids of electrodes rigidly attached to the same sensor device.
     If multiple sensor devices with heterogeneous inter-electrode distances are recorded into
