--- a/src/schema/rules/tabular_data/events.yaml
+++ b/src/schema/rules/tabular_data/events.yaml
@@ -19,22 +19,22 @@ Events:
       level: optional
       description_addendum: |
         Note that this column only applies to
-        microelectrode eleectrophysiology data type.
+        microelectrode electrophysiology data type.
     duration_index:
       level: optional
       description_addendum: |
         Note that this column only applies to
-        microelectrode eleectrophysiology data type.
+        microelectrode electrophysiology data type.
     onset_index:
       level: optional
       description_addendum: |
         Note that this column only applies to
-        microelectrode eleectrophysiology data type.
+        microelectrode electrophysiology data type.
     trial_id:
       level: optional
       description_addendum: |
         Note that this column only applies to
-        microelectrode eleectrophysiology data type.
+        microelectrode electrophysiology data type.
   additional_columns: allowed
   initial_columns:
     - onset
