--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -4026,8 +4026,7 @@ Software:
       ActedOnBehalfOf:
         name: ActedOnBehalfOf
         description: |
-          Identifier of another software package that was responsible for using the software package
-          in the context of the activities associated to it.
+          Identifier of another software package that triggered the use of the software package.
 
           Example: if software A launches software B to perform activity C, then B ActedOnBehalfOf A.
 
