Align's validator to bids-examples/petprep
Made some small changes to schema some relating to PET and
some small edits to other imaging to account for some "compiling"
errors encountered during the schema export/build. Meddling outside
of PET was limited to
- src/schema/rules/files/imaging.yaml
- src/schema/rules/dataset_metadata.yaml

The former had something to do with duplicate keys in the yaml and the
later was made to allow for dataset description jsons at both
/derivatives/dataset_description.json and
/derivatives/pipline_name/dataset_description.json

--- a/src/schema/rules/files/deriv/imaging.yaml
+++ b/src/schema/rules/files/deriv/imaging.yaml
@@ -320,18 +320,14 @@ anat_discrete_surface:
   $ref:
     - meta.templates.deriv.dseg_surface
     - rules.files.raw.anat.nonparametric
-  entities:
-    # ibid
-    $ref:
-      - meta.templates.deriv.dseg_surface.entities
-      - rules.files.raw.anat.nonparametric.entities
   selectors:
     - dataset.dataset_description.DatasetType == 'derivative'
-  $ref: rules.files.raw.dwi.dwi
   suffixes:
     - probseg
   entities:
-    $ref: rules.files.raw.dwi.dwi.entities
+    $ref:
+      - meta.templates.deriv.dseg_surface.entities
+      - rules.files.raw.anat.nonparametric.entities
     space: optional
     segmentation: optional
     resolution: optional
@@ -386,6 +382,8 @@ pet_petref:
   selectors:
     - dataset.dataset_description.DatasetType == 'derivative'
   $ref: rules.files.raw.pet.pet
+  datatypes:
+    - pet
   suffixes:
     - petref
   extensions:
