--- a/src/schema/rules/dataset_metadata.yaml
+++ b/src/schema/rules/dataset_metadata.yaml
@@ -36,7 +36,7 @@ dataset_authors:
 
 derivative_description:
   selectors:
-    - path == "/dataset_description.json"
+    - match(path, ".*dataset_description.json$")
     - json.DatasetType == "derivative"
   fields:
     GeneratedBy: required
